# buici-clock

./: .gdbinit  ANNOUNCEMENT  CHANGELOG  ChangeLog  LSM  Makefile.in  NOTES  README  README.md  acconfig.h  aclocal.m4  buici-clock  buici-clock-0.4.9.README  buici-clock.1  buici.xbm  clock.cxx  config.h.in  configure  configure.in  draw.cc  info.sh  main.cxx  options.cxx  options.h  packageinfo  signal.cxx  signal.h  standard.h  support.sh  version.cxx  version.h
debian/: buici-clock.menu  changelog  control  copyright  postinst
patches/: patch.0
xo/: LSM  Makefile.in  Notes  README  classes.cxx  config.h.in  configure  configure.in  configure.lineno  dither.cxx  dither.h  dmalloc.cxx  dmalloc.h  larray.cxx  larray.h  ldisplay.cxx  ldisplay.h  lfont.cxx  lfont.h  lhash.cxx  lhash.h  loupe.cxx  lpicture.cxx  lpicture.h  lres.h  lwindow.cxx  lwindow.h  lwindowclass.cxx  lwindowclass.h  main.cxx  messages.h  res.cxx  res.h  res_l.l  res_y.y  sample.dlg  standard.h  stats.cxx  stats.h  wbutton.cxx  (+5 more)
