dnl Process this file with autoconf to produce a configure script.
AC_REVISION([$Id: configure.in,v 1.5 2000/01/13 07:04:46 elf Exp $])
AC_PREREQ(2.12)dnl              dnl Minimum Autoconf version required.
AC_INIT(ldisplay.cxx)		dnl Name of unique file that must exist

AC_CONFIG_HEADER(config.h)

AC_LANG_CPLUSPLUS		dnl Default to c++ cause that what we done.

dnl Checks for programs.
AC_PROG_YACC
AC_PROG_LEX
AC_PROG_CXX
AC_PROG_LN_S

if test "${GXX}" = "yes" ; then 
 CFLAGS_W=" -Wall -Wno-parentheses -Wno-unused" 
 CFLAGS="${CFLAGS}"
fi

dnl Checks for header files.
AC_PATH_XTRA
AC_HEADER_STDC
AC_CHECK_FUNCS(memset strncmp)
AC_CHECK_HEADERS(memory.h fcntl.h limits.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
dnl -- Removed because it tends to interfere with headers
dnl AC_C_CONST
dnl -- Removed because it tends to interfere with headers
dnl AC_C_INLINE
AC_TYPE_SIZE_T
AC_HEADER_TIME

dnl Checks for library functions.
dnl AC_FUNC_MMAP
dnl AC_FUNC_VPRINTF				dnl -- We use vsprintf


AC_SUBST(CFLAGS_W)
AC_OUTPUT(Makefile)

dnl -- Prevent accidental edits.  
chmod -w Makefile
chmod -w config.h
